Add vulnerabilities and enable static analysis in pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -178,5 +178,8 @@ service-account-key.json
 build.env
 deploy.env
 
-## Dependency scanning
+## Scanning reports
+gl-dependency-scanning-report.json
 gl-sbom-npm-npm.cdx.json
+gl-secret-detection-report.json
+gl-sast-report.json
