--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,8 @@
     "@faker-js/faker": "^10.1.0",
     "@prisma/client": "^6.18.0",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "axios": "0.21.0"
   },
   "devDependencies": {
     "jest": "^30.2.0",
